--- a/package.json
+++ b/package.json
@@ -3,80 +3,71 @@
     "version": "1.0.0",
     "description": "",
     "author": "MRBTX <brianteachman@gmail.com> (https://brianteachman.com)",
-    "main": "src/main.js",
+    "main": "./main.js",
     "private": true,
     "scripts": {
-      "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-      "start": "npm run dev",
-      "unit": "jest --config test/unit/jest.conf.js --coverage",
-      "test": "npm run unit",
-      "lint": "eslint --ext .js,.vue src test/unit",
-      "build": "node build/build.js"
-    },
-    "dependencies": {
-      "@types/chance": "^0.7.33",
-      "@types/lodash": "^4.17",
-      "accepts": "^1.3.3",
-      "array-flatten": "^1.1.1",
-      "": "^",
-      "": "^",
-      "": "^",
-      "": "^",
-      "": "^"
+        "dev": "",
+        "start": "npm run dev",
+        "unit": "",
+        "test": "c",
+        "lint": "eslint --ext .js",
+        "build": "node build/build.js"
     },
     "devDependencies": {
-      "babel-eslint": "^8.2.1",
-      "babel-helper-vue-jsx-merge-props": "^2.0.3",
-      "babel-jest": "^21.0.2",
-      "babel-loader": "^7.1.1",
-      "babel-plugin-dynamic-import-node": "^1.2.0",
-      "babel-plugin-syntax-jsx": "^6.18.0",
-      "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-      "babel-plugin-transform-runtime": "^6.22.0",
-      "babel-plugin-transform-vue-jsx": "^3.5.0",
-      "babel-preset-env": "^1.3.2",
-      "babel-preset-stage-2": "^6.22.0",
-      "chalk": "^2.0.1",
-      "copy-webpack-plugin": "^4.0.1",
-      "css-loader": "^0.28.0",
-      "eslint": "^4.15.0",
-      "eslint-config-airbnb-base": "^11.3.0",
-      "eslint-friendly-formatter": "^3.0.0",
-      "eslint-import-resolver-webpack": "^0.8.3",
-      "eslint-loader": "^1.7.1",
-      "eslint-plugin-import": "^2.7.0",
-      "eslint-plugin-vue": "^4.0.0",
-      "extract-text-webpack-plugin": "^3.0.0",
-      "file-loader": "^1.1.4",
-      "friendly-errors-webpack-plugin": "^1.6.1",
-      "html-webpack-plugin": "^2.30.1",
-      "jest": "^22.0.4",
-      "jest-serializer-vue": "^0.3.0",
-      "node-notifier": "^5.1.2",
-      "optimize-css-assets-webpack-plugin": "^3.2.0",
-      "ora": "^1.2.0",
-      "portfinder": "^1.0.13",
-      "postcss-import": "^11.0.0",
-      "postcss-loader": "^2.0.8",
-      "postcss-url": "^7.2.1",
-      "rimraf": "^2.6.0",
-      "semver": "^5.3.0",
-      "shelljs": "^0.7.6",
-      "uglifyjs-webpack-plugin": "^1.1.1",
-      "url-loader": "^0.5.8",
-      "vue-jest": "^1.0.2",
-      "vue-loader": "^13.3.0",
-      "vue-style-loader": "^3.0.1",
-      "vue-template-compiler": "^2.5.2",
-      "webpack": "^3.6.0",
-      "webpack-bundle-analyzer": "^2.9.0",
-      "webpack-dev-server": "^2.9.1",
-      "webpack-merge": "^4.1.0"
+        "@types/chance": "^0.7.33",
+        "@types/lodash": "latest",
+        "accepts": "^1.3.3",
+        "array-flatten": "^1.1.1",
+        "chance": "^1.0.10",
+        "content-disposition": "^0.5.2",
+        "content-type": "^1.0.2",
+        "cookie": "^0.3.1",
+        "cookie-signature": "^1.0.6",
+        "debug": "^2.6.7",
+        "depd": "^1.1.0",
+        "destroy": "^1.0.4",
+        "ee-first": "^1.1.1",
+        "encodeurl": "^1.0.1",
+        "escape-html": "^1.0.3",
+        "etag": "^1.8.0",
+        "express": "^4.15.3",
+        "finalhandler": "^1.0.3",
+        "forwarded": "^0.1.0",
+        "fresh": "^0.5.0",
+        "http-errors": "^1.6.1",
+        "inherits": "^2.0.3",
+        "ipaddr.js": "^1.3.0",
+        "lodash": "^4.17.4",
+        "media-typer": "^0.3.0",
+        "merge-descriptors": "^1.0.1",
+        "methods": "^1.1.2",
+        "mime": "^1.3.4",
+        "mime-db": "^1.27.0",
+        "mime-types": "^2.1.15",
+        "ms": "^2.0.0",
+        "negotiator": "^0.6.1",
+        "on-finished": "^2.3.0",
+        "parseurl": "^1.3.1",
+        "path-to-regexp": "^0.1.7",
+        "proxy-addr": "^1.1.4",
+        "qs": "^6.4.0",
+        "range-parser": "^1.2.0",
+        "send": "^0.17.1",
+        "serve-static": "^1.12.3",
+        "setprototypeof": "^1.0.3",
+        "statuses": "^1.3.1",
+        "type-is": "^1.6.15",
+        "unpipe": "^1.0.0",
+        "utils-merge": "^1.0.0",
+        "vary": "^1.1.1"
     },
     "engines": {
-      "node": ">= 6.0.0",
-      "npm": ">= 3.0.0"
+        "node": ">= 6.0.0",
+        "npm": ">= 3.0.0"
     },
-    "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
-  }
-  
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8"
+    ]
+}
