--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "http-errors": "^1.6.1",
         "inherits": "^2.0.3",
         "ipaddr.js": "^1.3.0",
-        "lodash": "^4.17.4",
+        "lodash": "latest",
         "media-typer": "^0.3.0",
         "merge-descriptors": "^1.0.1",
         "methods": "^1.1.2",
