Updated setup instructions and renamed task.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,6 @@
-// Less configuration
+// Less and Typescript Compilation Task configuration
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
+    // See https://code.visualstudio.com/docs/editor/tasks
     // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
@@ -11,7 +11,7 @@
             "group": "build"
         },
         {
-            "label": "Compile JS",
+            "label": "Compile TS",
             "type": "shell",
             "command": "tsc --outDir build main.ts",
             "group": "build"
