--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
     "private": true,
     "scripts": {
         "dev": "",
-        "start": "npm run dev",
+        "start": "node server.js",
         "unit": "",
         "test": "",
-        "lint": "eslint --ext .js",
-        "build": "node build/build.js"
-    },
-    "dependencies": {
-        "less": "latest"
+        "lint": "eslint --fix --ext .js build",
+        "build": "tsc --outDir build main.ts && lessc main.less build/main.css"
     },
     "devDependencies": {
         "@types/chance": "^0.7.33",
         "@types/lodash": "latest",
+        "@typescript-eslint/eslint-plugin": "^5.3.0",
+        "@typescript-eslint/parser": "^5.3.0",
         "accepts": "^1.3.3",
         "array-flatten": "^1.1.1",
         "chance": "^1.0.10",
@@ -32,6 +31,11 @@
         "ee-first": "^1.1.1",
         "encodeurl": "^1.0.1",
         "escape-html": "^1.0.3",
+        "eslint": "^7.32.0",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.1.1",
         "etag": "^1.8.0",
         "express": "^4.15.3",
         "finalhandler": "^1.0.3",
@@ -72,5 +76,8 @@
         "> 1%",
         "last 2 versions",
         "not ie <= 8"
-    ]
+    ],
+    "dependencies": {
+        "less": "^4.1.2"
+    }
 }
